fix: body blur on mobile

--- a/relict/css/style.css
+++ b/relict/css/style.css
@@ -140,6 +140,7 @@ button {
 .header__blur_menu-open {
   background-color: rgba(0, 0, 0, 0);
   backdrop-filter: none;
+  -webkit-backdrop-filter: none;
   opacity: 1;
 }
 
@@ -437,6 +438,7 @@ body._touch .header__nav-list > li._active .menu__sub-list {
     width: 100%;
     height: 100%;
     backdrop-filter: blur(100px);
+    -webkit-backdrop-filter: blur(100px);
     padding: 100px 30px 30px 30px;
     transition: 0.4s ease 0s;
     overflow: auto;
